fixed cvc display issue on mobile

--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ div.secondaryContainer:nth-child(2) {
 }
 #cardSecurityDetails{
     display: flex;
-    flex-wrap: wrap;
 }
 #cardSecurityDetails label {
     display: block;
